Disc and Bio HTML pages; Fixed a problem with some whitespace to the right. Inherited margins were interfering (fixed with 'margin= 0;' ).

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,6 +102,14 @@ h1, h2, h3, h4 {
     padding: 0;
 }
 
+.banner-logo-container .row {
+    margin: 0;
+}
+
+.banner-logo-container .row .col {
+    padding: 0;
+}
+
 .banner-logo {
     width: 100%;
     height: auto;
@@ -110,6 +118,9 @@ h1, h2, h3, h4 {
 /* ----------------------------------Navbar */
 
 .navbar-default {
+    /* margin: 0; */
+    /* padding: 0; */
+    /* width: 100vw; */
     background: transparent;
     transition: 0.5s ease-in;
     -moz-transition: 0.5s ease-in;
@@ -272,6 +283,10 @@ h1, h2, h3, h4 {
     background-color: #73715F;
     margin: 0;
     padding: 0;
+}
+
+.disc-container .row {
+    margin: 0;
 }
 
 .disc-heading {
